fix buefy container padding on mobile + strange overflow

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,6 +1,7 @@
 body {
   font-family: 'Rubik', sans-serif;
   background-color: $background;
+  overflow: hidden;
 }
 
 .info-box {
